[package]
name = "roast"
version = "1.0.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
java-locator = "0.1.5"
jni = { version = "0.21.1", features = ["invocation"] }
log = "0.4.22"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
windows-version = "0.1.0"

[package.metadata.cross.target.x86_64-pc-windows-msvc]
image = "ghcr.io/cross-rs/x86_64-pc-windows-msvc-cross:local"

[profile.release]
strip = true

[features]
win_console = []
win_no_gpu = []
